--- a/Module0/Module0_CNN_PET_MRI.ipynb
+++ b/Module0/Module0_CNN_PET_MRI.ipynb
@@ -1313,103 +1313,112 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 112,
+      "execution_count": 119,
       "metadata": {
         "id": "SPSQLKs7tp-b"
       },
       "outputs": [],
       "source": [
-        "def train_model(model, train_loader, val_loader, num_epochs=5, learning_rate=0.001, use_gpu=False):\n",
-        "    # Check if CUDA is available and use GPU if specified\n",
-        "    device = torch.device('cuda' if use_gpu and torch.cuda.is_available() else 'cpu')\n",
-        "    model.to(device)\n",
-        "\n",
-        "    # Define loss criterion and optimizer\n",
-        "    criterion = nn.CrossEntropyLoss()\n",
-        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
-        "\n",
-        "    # Create a list to store metrics\n",
-        "    metrics = {'epoch': [], 'train_loss': [], 'train_accuracy': [], 'train_auc': [],\n",
-        "                'val_loss':[], 'val_accuracy': [], 'val_auc': []}\n",
-        "\n",
-        "    # Training loop\n",
-        "    for epoch in range(num_epochs):\n",
+        "def run_epoch(model, data_loader, criterion, optimizer, device, train=True):\n",
+        "    if train:\n",
         "        model.train()\n",
-        "        running_loss = 0.0\n",
-        "        correct_predictions = 0\n",
-        "        total_predictions = 0\n",
+        "    else:\n",
+        "        model.eval()\n",
         "\n",
-        "        # Training Phase\n",
-        "        for images, labels in tqdm(train_loader, desc=f'Epoch {epoch+1}/{num_epochs}', leave=False):\n",
-        "            images, labels = images.to(device), labels.to(device)\n",
+        "    running_loss = 0.0\n",
+        "    correct_predictions = 0\n",
+        "    total_predictions = 0\n",
+        "    all_labels = []\n",
+        "    all_probs = []\n",
         "\n",
+        "    for images, labels in tqdm(data_loader, desc='Training' if train else 'Validation', leave=False):\n",
+        "        images, labels = images.to(device), labels.to(device)\n",
+        "\n",
+        "        if train:\n",
         "            optimizer.zero_grad()\n",
-        "            outputs = model(images)\n",
-        "            loss = criterion(outputs, labels)\n",
+        "\n",
+        "        outputs = model(images)\n",
+        "        loss = criterion(outputs, labels)\n",
+        "        running_loss += loss.item()\n",
+        "\n",
+        "        if train:\n",
         "            loss.backward()\n",
         "            optimizer.step()\n",
-        "            running_loss += loss.item()\n",
         "\n",
-        "            # Calculate accuracy\n",
-        "            _, predicted = torch.max(outputs, 1)\n",
-        "            correct_predictions += (predicted == labels).sum().item()\n",
-        "            total_predictions += labels.size(0)\n",
+        "        # Calculate accuracy\n",
+        "        _, predicted = torch.max(outputs, 1)\n",
+        "        correct_predictions += (predicted == labels).sum().item()\n",
+        "        total_predictions += labels.size(0)\n",
         "\n",
-        "        # Calculate epoch metrics\n",
-        "        epoch_loss = running_loss / len(train_loader)\n",
-        "        epoch_accuracy = correct_predictions / total_predictions\n",
-        "        metrics['epoch'].append(epoch + 1)\n",
-        "        metrics['train_loss'].append(epoch_loss)\n",
-        "        metrics['train_accuracy'].append(epoch_accuracy)\n",
+        "        # Store probabilities for AUC\n",
+        "        probs = nn.functional.softmax(outputs, dim=1)[:, 1]\n",
+        "        all_labels.extend(labels.cpu().numpy())\n",
+        "        all_probs.extend(probs.detach().cpu().numpy())  # Detach before converting to numpy\n",
         "\n",
-        "        # Validation Phase\n",
-        "        model.eval()\n",
-        "        all_labels = []\n",
-        "        all_probs = []\n",
-        "        with torch.no_grad():\n",
-        "            for images, labels in val_loader:\n",
-        "                images, labels = images.to(device), labels.to(device)\n",
-        "                outputs = model(images)\n",
-        "                probs = nn.functional.softmax(outputs, dim=1)[:, 1]  # Probability of class 1\n",
-        "                all_labels.extend(labels.cpu().numpy())\n",
-        "                all_probs.extend(probs.cpu().numpy())\n",
-        "\n",
-        "        # Calculate AUC\n",
-        "        val_auc = roc_auc_score(all_labels, all_probs)\n",
-        "        metrics['val_auc'].append(val_auc)\n",
-        "\n",
-        "        print(f'Epoch {epoch+1}/{num_epochs}, Loss: {epoch_loss:.4f}, Accuracy: {epoch_accuracy:.4f}, Val AUC: {val_auc:.4f}')\n",
-        "\n",
-        "    # Convert metrics to a DataFrame\n",
-        "    metrics_df = pd.DataFrame(metrics)\n",
-        "    return metrics_df"
+        "    epoch_loss = running_loss / len(data_loader)\n",
+        "    epoch_accuracy = correct_predictions / total_predictions\n",
+        "    epoch_auc = roc_auc_score(all_labels, all_probs)\n",
+        "    return epoch_loss, epoch_accuracy, epoch_auc\n"
       ]
     },
     {
       "cell_type": "code",
       "source": [
+        "def train_model(model, train_loader, val_loader, num_epochs=5, learning_rate=0.001, use_gpu=False):\n",
+        "    device = torch.device('cuda' if use_gpu and torch.cuda.is_available() else 'cpu')\n",
+        "    model.to(device)\n",
         "\n",
-        "metrics_df = train_model(model, train_loader, val_loader, num_epochs = 1, use_gpu = True)"
+        "    criterion = nn.CrossEntropyLoss()\n",
+        "    optimizer = optim.Adam(model.parameters(), lr=learning_rate)\n",
+        "\n",
+        "    metrics = {'epoch': [], 'train_loss': [], 'train_accuracy': [], 'train_auc': [],\n",
+        "               'val_loss': [], 'val_accuracy': [], 'val_auc': []}\n",
+        "\n",
+        "    for epoch in range(num_epochs):\n",
+        "        train_loss, train_accuracy, train_auc = run_epoch(model, train_loader, criterion, optimizer, device, train=True)\n",
+        "        val_loss, val_accuracy, val_auc = run_epoch(model, val_loader, criterion, optimizer, device, train=False)\n",
+        "\n",
+        "        metrics['epoch'].append(epoch + 1)\n",
+        "        metrics['train_loss'].append(train_loss)\n",
+        "        metrics['train_accuracy'].append(train_accuracy)\n",
+        "        metrics['train_auc'].append(train_auc)\n",
+        "        metrics['val_loss'].append(val_loss)\n",
+        "        metrics['val_accuracy'].append(val_accuracy)\n",
+        "        metrics['val_auc'].append(val_auc)\n",
+        "\n",
+        "        print(f\"Epoch {epoch+1}/{num_epochs}, Train Loss: {train_loss:.4f}, Train Acc: {train_accuracy:.4f}, \"\n",
+        "              f\"Train AUC: {train_auc:.4f}, Val Loss: {val_loss:.4f}, Val Acc: {val_accuracy:.4f}, Val AUC: {val_auc:.4f}\")\n",
+        "\n",
+        "    metrics_df = pd.DataFrame(metrics)\n",
+        "    return metrics_df"
+      ],
+      "metadata": {
+        "id": "KIMqdWj_8O6i"
+      },
+      "execution_count": 120,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Assuming 'model', 'train_loader', and 'val_loader' are defined elsewhere\n",
+        "metrics_df = train_model(model, train_loader, val_loader, use_gpu=True, num_epochs = 1)\n",
+        "print(metrics_df)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "oM4X-3tX1iQg",
-        "outputId": "d83487c7-ee41-4cbf-b4bf-002e3f7a65d6"
+        "outputId": "aaff3fcb-d6ae-4589-ef10-b484339bda80"
       },
-      "execution_count": 113,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stderr",
-          "text": []
-        },
-        {
-          "output_type": "stream",
-          "name": "stdout",
           "text": [
-            "Epoch 1/1, Loss: 0.3171, Accuracy: 0.9964, Val AUC: 0.9999\n"
+            "Training:  19%|█▉        | 10/52 [00:19<01:12,  1.72s/it]"
           ]
         }
       ]
